# php-arrow-rs-ext

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  composer.json  parquet.stubs.php  phpunit.xml
.github/workflows/: release.yml  tests.yml
benchmarks/: benchmark.php  benchmark_nested.php
pie/: .gitignore  config.m4
src/: column.rs  compression.rs  encoding.rs  exception.rs  lib.rs  metadata.rs  reader.rs  schema.rs  types.rs  writer.rs
tests/: CompressionTest.php  NestedTypesTest.php  PerColumnOptionsTest.php  SchemaTest.php  StreamIOTest.php  TypesTest.php  WriteReadTest.php
