[package]
name = "parquet-php"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "PHP extension for reading and writing Apache Parquet files, powered by arrow-rs"
authors = ["Pierre Tondereau <pierre.tondereau@protonmail.com>"]

[dependencies]
ext-php-rs = "0.15.6"
parquet = { version = "58", features = ["arrow", "snap", "flate2", "brotli", "lz4", "zstd"] }
arrow = { version = "58", default-features = false, features = ["chrono-tz"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
bytes = "1"

[lib]
name = "parquet"
crate-type = ["cdylib"]

[profile.release]
strip = "debuginfo"
lto = "thin"
opt-level = 3

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
needless_pass_by_value = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
